--- a/src/WebPScanner.Api/appsettings.json
+++ b/src/WebPScanner.Api/appsettings.json
@@ -17,7 +17,11 @@
   "Crawler": {
     "MaxPagesPerScan": 2000,
     "PageTimeoutSeconds": 30,
-    "NetworkIdleTimeoutMs": 2000,
+    "NetworkIdleTimeoutMs": 500,
+    "MaxNetworkIdleWaitMs": 5000,
+    "PendingImageGracePeriodMs": 300,
+    "ScrollToTriggerLazyImages": true,
+    "ScrollStepDelayMs": 100,
     "DelayBetweenPagesMs": 500,
     "MaxRetries": 3,
     "RespectRobotsTxt": true,
