Improve queue wait time estimation and scrolling behavior (#6)
* Improve queue wait time estimation and scrolling behavior

- Add TotalScanDurationTicks to AggregateStats and migration
- Calculate average time per page for queue wait estimates in AggregateStatsService
- Track live scan remaining pages with ILiveScanStatsTracker enhancements and LiveScanStatsTracker methods
- Implement detailed queue wait time estimation in ScanProgressService using active scans and average time per page
- Throttle queue position broadcasts during scanning progress to reduce chatter
- Update QueuePositionUpdateDto and client store/types to include EstimatedWaitSeconds
- Display estimated wait time in QueueDisplay component with human-readable formatting
- Adjust scrolling in CrawlerService to use fewer, larger mouse wheel steps for more realistic lazy load triggering
- Fix bugs in interrupted scan resuming logic to properly run resumed scans concurrently without blocking queue processing
- Extend tests for ScanProgressService with mocks for new dependencies

Update configuration defaults and docker/gitignore for Rider Windows paths

* Integrate MSBuild build host and runtime binaries; improve code and tests

- Added Microsoft.Build.Locator and other build host DLLs for net472 and netcore targets
- Included related dependencies like Newtonsoft.Json, System.CommandLine, and resource DLLs
- Updated .gitignore to remove redundant bin\\*, obj\\* ignores for Rider Windows paths
- Refactored CrawlerService to fix ReSharper warnings on integer divisions for scroll steps
- Removed unused mouse movement simulation method from CrawlerService
- Updated QueueProcessorService to remove unnecessary concurrency semaphore and simplify resume logs
- Added clamping to zero for scan duration ticks calculation in AggregateStatsService
- Added ReSharper comments for config-binding properties and JSON deserialization usage
- Fixed test setup in ScanProgressServiceTests to return empty list in mocked GetAct

--- a/.dockerignore
+++ b/.dockerignore
@@ -13,6 +13,9 @@
 # .NET build outputs
 **/bin/
 **/obj/
+# Rider sometimes creates directories with backslashes (Windows-style paths)
+**/bin\\*
+**/obj\\*
 **/*.user
 **/*.suo
 **/*.cache
